# enrollmentapp

./: .gitignore  AGENTS.md  CHANGELOG.md  Capital Candy Company Inc.organization  LICENSE  README.md  SECURITY.md  SPEC.md  check_enrollment.py  enroll.py  enroll_gui.py  pyproject.toml
docs/: ENROLLMENT_FLOWS.md
docs/superpowers/plans/: 2026-04-21-apple-device-cli-implementation-plan.md  2026-04-21-skip-onboarding-panes-plan.md  2026-04-23-enroll-org-storage-migration-plan.md  2026-04-23-mobileconfig-import-plan.md  2026-04-23-release-prep.md
docs/superpowers/specs/: 2026-04-21-apple-device-cli-design.md  2026-04-21-profile-install-design.md  2026-04-21-skip-onboarding-panes-design.md  2026-04-23-mobileconfig-import-design.md  2026-04-23-release-prep-design.md
scripts/: migrate_orgs.py
src/apple_device_cli/: cli.py
src/apple_device_cli/core/: exceptions.py  redaction.py
src/apple_device_cli/device/: connection.py  info.py  state.py
src/apple_device_cli/enrollment/: activation.py  flows.py  skip_panes.py  supervised.py
src/apple_device_cli/orgs/: identity.py  manager.py
src/apple_device_cli/restore/: erase.py
tests/: conftest.py  test_cli_improvements.py  test_device_info.py  test_enrollment.py  test_enrollment_flow_fixes.py  test_enrollment_flows.py  test_enrollment_integration.py  test_identity.py  test_mobileconfig_import.py  test_org_import_export.py  test_org_manager.py  test_org_set_commands.py  test_redaction.py  test_restore.py  test_skip_panes.py
