[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ios-enroll"
version = "0.1.0"
description = "iOS device supervised enrollment CLI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.12.0",
    "pymobiledevice3>=3.0.0",
    "cryptography>=42.0.0",
]

[project.scripts]
ios-enroll = "apple_device_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_device_cli"]