[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ios-enroll"
version = "0.1.0"
description = "iOS device supervised enrollment CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["ios", "apple", "supervision", "enrollment", "mdm", "mobile-device-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.12.0",
    "pymobiledevice3>=3.0.0",
    "cryptography>=42.0.0",
]

[project.scripts]
ios-enroll = "apple_device_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_device_cli"]