[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ios-enroll"
version = "0.1.0"
description = "iOS device supervised enrollment CLI"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ios", "apple", "supervision", "enrollment", "mdm", "mobile-device-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.25.0",
    "pymobiledevice3>=9.12.0",
    "cryptography>=45.0.0",
    "ipsw-parser>=1.6.0",
]

[project.scripts]
ios-enroll = "apple_device_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_device_cli"]